# flux-tree-sitter

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  binding.gyp  grammar.js  package.json  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
examples/: contact-centre.flux  demo.flux  readme-example.flux
queries/: highlights.scm  injections.scm  locals.scm
scripts/: install-helix.sh  render-example.mjs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: install-helix.sh
test/corpus/: current_surface.txt  declarations.txt  statements.txt
