[package]
name = "flux-tree-sitter"
description = "Flux-Lang grammar for tree-sitter"
version = "0.1.0"
authors = ["codewandler"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flux"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/codewandler/flux-tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "/bindings/rust/*",
    "/grammar.js",
    "/queries/*",
    "/src/*",
    "/tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
streaming-iterator = "0.1"
tree-sitter = "0.24"
